syntax = "proto3";

package plugin.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/gatewayd-io/gatewayd/plugin/v1";

enum Action {
    ACTION_UNSPECIFIED = 0;
    ACTION_KILL = 1;
    ACTION_RESTART = 2;
    ACTION_RELOAD = 3;
}

message SemVer {
    uint32 major = 1;
    uint32 minor = 2;
    uint32 patch = 3;
}

message PluginConfig {
    string name = 1;
    SemVer version = 2;
    string description = 3;
    string author = 4;
    string license = 5;
    string remote_url = 6;
    string url = 7;
    // internal and external config options
    map<string, string> config = 8;
    // hooks it attaches to
    repeated string hooks = 9;
    // required plugins
    map<string, string> requires = 10;
    repeated string tags = 11;
    repeated string categories = 12;
}

message PluginConfigRequest {
    google.protobuf.Empty empty = 1;
}

message PluginConfigResponse {
    PluginConfig config = 1;
}

// const (
// 	OnConfigLoaded    HookType = "onConfigLoaded"
// 	OnNewLogger       HookType = "onNewLogger"
// 	OnNewPool         HookType = "onNewPool"
// 	OnNewProxy        HookType = "onNewProxy"
// 	OnNewServer       HookType = "onNewServer"
// 	OnSignal          HookType = "onSignal"
// 	OnRun             HookType = "onRun"
// 	OnBooting         HookType = "onBooting"
// 	OnBooted          HookType = "onBooted"
// 	OnOpening         HookType = "onOpening"
// 	OnOpened          HookType = "onOpened"
// 	OnClosing         HookType = "onClosing"
// 	OnClosed          HookType = "onClosed"
// 	OnTraffic         HookType = "onTraffic"
// 	OnIncomingTraffic HookType = "onIncomingTraffic"
// 	OnOutgoingTraffic HookType = "onOutgoingTraffic"
// 	OnShutdown        HookType = "onShutdown"
// 	OnTick            HookType = "onTick"
// 	OnNewClient       HookType = "onNewClient"
// )

message OnConfigLoadedRequest {
    map<string, google.protobuf.Any> config = 1;
}

message OnConfigLoadedResponse {
    map<string, google.protobuf.Any> config = 1;
}

// Logger request/response
message OnNewLoggerRequest {
    google.protobuf.Any logger = 1;
}

message OnNewLoggerResponse {
    google.protobuf.Empty empty = 1;
}

message OnNewPoolRequest {
    google.protobuf.Any pool = 1;
}

message OnNewPoolResponse {
    google.protobuf.Empty empty = 1;
}

message OnNewProxyRequest {
    google.protobuf.Any proxy = 1;
}

message OnNewProxyResponse {
    google.protobuf.Empty empty = 1;
}

message OnNewServerRequest {
    google.protobuf.Any server = 1;
}

message OnNewServerResponse {
    google.protobuf.Empty empty = 1;
}

message OnSignalRequest {
    string signal = 1;
}

message OnSignalResponse {
    Action action = 1;
}

message OnRunRequest {
    google.protobuf.Empty empty = 1;
}

message OnRunResponse {
    google.protobuf.Empty empty = 1;
}

message OnBootingRequest {
    google.protobuf.Empty empty = 1;
}

message OnBootingResponse {
    google.protobuf.Empty empty = 1;
}

message OnBootedRequest {
    google.protobuf.Empty empty = 1;
}

message OnBootedResponse {
    google.protobuf.Empty empty = 1;
}

message OnOpeningRequest {
    google.protobuf.Empty empty = 1;
}

message OnOpeningResponse {
    google.protobuf.Empty empty = 1;
}

message OnOpenedRequest {
    google.protobuf.Empty empty = 1;
}

message OnOpenedResponse {
    google.protobuf.Empty empty = 1;
}

message OnClosingRequest {
    google.protobuf.Empty empty = 1;
}

message OnClosingResponse {
    google.protobuf.Empty empty = 1;
}

message OnClosedRequest {
    google.protobuf.Empty empty = 1;
}

message OnClosedResponse {
    google.protobuf.Empty empty = 1;
}

message OnTrafficRequest {
    google.protobuf.Any traffic = 1;
}

message OnTrafficResponse {
    google.protobuf.Empty empty = 1;
}

message OnIncomingTrafficRequest {
    google.protobuf.Any traffic = 1;
}

message OnIncomingTrafficResponse {
    google.protobuf.Empty empty = 1;
}

message OnOutgoingTrafficRequest {
    google.protobuf.Any traffic = 1;
}

message OnOutgoingTrafficResponse {
    google.protobuf.Empty empty = 1;
}

message OnShutdownRequest {
    google.protobuf.Empty empty = 1;
}

message OnShutdownResponse {
    google.protobuf.Empty empty = 1;
}

message OnTickRequest {
    google.protobuf.Empty empty = 1;
}

message OnTickResponse {
    google.protobuf.Empty empty = 1;
}

message OnNewClientRequest {
    google.protobuf.Any client = 1;
}

message OnNewClientResponse {
    google.protobuf.Empty empty = 1;
}

service GDPService {
    // PluginConfig returns the plugin config for registration
    rpc PluginConfig (PluginConfigRequest) returns (PluginConfigResponse);

    // OnConfigLoaded is called when the config is loaded from any config provider
    rpc OnConfigLoaded (OnConfigLoadedRequest) returns (OnConfigLoadedResponse);
    rpc OnNewLogger (OnNewLoggerRequest) returns (OnNewLoggerResponse);
    rpc OnNewPool (OnNewPoolRequest) returns (OnNewPoolResponse);
    rpc OnNewProxy (OnNewProxyRequest) returns (OnNewProxyResponse);
    rpc OnNewServer (OnNewServerRequest) returns (OnNewServerResponse);
    rpc OnSignal (OnSignalRequest) returns (OnSignalResponse);
    rpc OnRun (OnRunRequest) returns (OnRunResponse);
    rpc OnBooting (OnBootingRequest) returns (OnBootingResponse);
    rpc OnBooted (OnBootedRequest) returns (OnBootedResponse);
    rpc OnOpening (OnOpeningRequest) returns (OnOpeningResponse);
    rpc OnOpened (OnOpenedRequest) returns (OnOpenedResponse);
    rpc OnClosing (OnClosingRequest) returns (OnClosingResponse);
    rpc OnClosed (OnClosedRequest) returns (OnClosedResponse);
    rpc OnTraffic (OnTrafficRequest) returns (OnTrafficResponse);
    rpc OnIncomingTraffic (OnIncomingTrafficRequest) returns (OnIncomingTrafficResponse);
    rpc OnOutgoingTraffic (OnOutgoingTrafficRequest) returns (OnOutgoingTrafficResponse);
    rpc OnShutdown (OnShutdownRequest) returns (OnShutdownResponse);
    rpc OnTick (OnTickRequest) returns (OnTickResponse);
    rpc OnNewClient (OnNewClientRequest) returns (OnNewClientResponse);
}
